2005-07-6 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Abstract/ButtonBox.chs.pp: export the
	ButtonBoxStyle flags type. We need to audit these things more
	carefully.

	* gtk/Graphics/UI/Gtk.hs: export Graphics.UI.Gtk.Pango.Description
	because it contains useful user-facing things. I don't think there's
	any private/internal stuff exported from it.

2005-07-5 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/concurrent/Progress.hs: use timeoutAddFull rather than idleAdd
	for the yield concurrency thing. This change means that it no longer
	takes 100% cpu time. By adjusting the timeout you can balance the
	latency and the polling load. A timeout value of 20 to 50 milliseconds
	seems to give adequete latency with negligable load. Also make the
	progress bar pulse more frequent.

2005-07-3 Axel Simon <A.Simon@kent.ac.uk>

	* gtk/Graphics/UI/Gtk/General/Enums.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Box.chs: Moved and expanded documentation
	on Packing in containers.

2005-07-3 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/System/Glib/Properties.chs: mark g_object_set_property as not
	being safe. That function can indeed call back into Haskell land since
	setting properties can trigger signals.

	* gtk/Graphics/UI/Gtk/TreeList/CellRendererText.chs: fix bug, setting
	editable attribute to Nothing should set editable-set to False.

	* gtk/Graphics/UI/Gtk/Abstract/Container.chs: remove
	containerChild(Get|Set)Property since it suffers from the same problem
	that object(Get|Set)Property had. Instead of these functions, users
	can use type safe child attributes (not yet added).

	* demo/treeList/ListTest.hs: show how to set an attribute on the
	renderer that applies to all the rows, ie it's global rather than
	being determined on a per-row bssis by the data model.

	* gtk/Graphics/UI/Gtk/General/General.chs: tidy up the documentation.

	* gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: add windowTitle